prevent word wrapping inside p, lists and headings

--- a/obsidian.css
+++ b/obsidian.css
@@ -23,7 +23,7 @@
   --color-bg-secondary: #0d1117;
   --color-bg-tertiary: #161b22;
   --color-bg-info: rgba(56, 139, 253, 0.1);
-  --color-markdown-code-bg: rgba(240,246,252,0.15);
+  --color-markdown-code-bg: rgba(240, 246, 252, 0.15);
 
   --color-text-primary: #c9d1d9;
   --color-timeline-text: #b1bac4;
@@ -85,6 +85,15 @@ pre[class*="language-"],
   font-family: monospace, monospace;
   font-size: 1em;
   color: var(--color-text-primary);
+}
+
+.markdown-preview-view p code,
+.markdown-preview-view li code,
+.markdown-preview-view h1 code,
+.markdown-preview-view h2 code,
+.markdown-preview-view h3 code,
+.markdown-preview-view h4 code {
+  display: inline-block;
 }
 
 .markdown-preview-view hr {
